generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

model CorsoDiStudi {
  id_corso_di_studi String                @id @default(uuid())
  nome              String                @unique
  studenti          Studente[]
  docenti           DocenteCorsoDiStudi[]
  bacheche          Bacheca[]
  corsi             Corso[]
}

model Studente {
  matricola        String         @id
  nome             String
  cognome          String
  email            String         @unique
  password         String
  id_corso_di_studi String
  corso_di_studi   CorsoDiStudi   @relation(fields: [id_corso_di_studi], references: [id_corso_di_studi])
  prenotazioni     Prenotazione[]
  segnalazioni     Segnalazione[]
}

model Segnalazione {
  id_segnalazione    String    @id @default(uuid())
  oggetto            String
  descrizione        String
  data_invio         DateTime  @default(now())
  stato              String    @default("APERTA")
  matricola_studente String?
  studente           Studente? @relation(fields: [matricola_studente], references: [matricola])
  id_docente         String?
  docente            Docente?  @relation(fields: [id_docente], references: [id_docente])
  allegato           String?
}

model Docente {
  id_docente       String                @id @default(uuid())
  nome             String
  cognome          String
  email            String                @unique
  password         String
  ufficio          String
  corsi            Corso[]
  slot_ricevimento SlotRicevimento[]
  corsi_di_studi   DocenteCorsoDiStudi[]
  segnalazioni     Segnalazione[]
}

model DocenteCorsoDiStudi {
  id_docente        String
  id_corso_di_studi String
  docente           Docente      @relation(fields: [id_docente], references: [id_docente])
  corso_di_studi    CorsoDiStudi @relation(fields: [id_corso_di_studi], references: [id_corso_di_studi])

  @@id([id_docente, id_corso_di_studi])
}

model Amministratore {
  id_admin String @id @default(uuid())
  nome     String
  email    String @unique
  password String
}

model Corso {
  id_corso          String      @id @default(uuid())
  nome_corso        String
  anno              Int
  cfu               Int
  id_docente        String
  docente           Docente     @relation(fields: [id_docente], references: [id_docente])
  id_corso_di_studi String?
  corso_di_studi    CorsoDiStudi? @relation(fields: [id_corso_di_studi], references: [id_corso_di_studi])
}

model Bacheca {
  id_bacheca                String       @id @default(uuid())
  titolo                    String
  descrizione               String
  data_ultimo_aggiornamento DateTime     @updatedAt
  id_corso_di_studi         String       @unique
  corso_di_studi            CorsoDiStudi @relation(fields: [id_corso_di_studi], references: [id_corso_di_studi])
  faqs                      FAQ[]
}

model FAQ {
  id_faq             String   @id @default(uuid())
  domanda            String
  risposta           String
  data_pubblicazione DateTime @default(now())
  ultima_modifica    DateTime @updatedAt
  id_bacheca         String
  bacheca            Bacheca  @relation(fields: [id_bacheca], references: [id_bacheca])
}

model SlotRicevimento {
  id_slot       String            @id @default(uuid())
  data          DateTime          @db.Date
  ora_inizio    DateTime          @db.Time(6)
  ora_fine      DateTime          @db.Time(6)
  disponibilita Boolean           @default(true)
  id_docente    String
  luogo         LuogoRicevimento?
  prenotazioni  Prenotazione[]
  docente       Docente           @relation(fields: [id_docente], references: [id_docente])
}

model LuogoRicevimento {
  id_luogo    String          @id @default(uuid())
  nome_aula   String
  edificio    String
  piano       String
  latitudine  Float?
  longitudine Float?
  id_slot     String          @unique
  slot        SlotRicevimento @relation(fields: [id_slot], references: [id_slot])
}

model Prenotazione {
  id_prenotazione    String          @id @default(uuid())
  data_prenotazione  DateTime        @default(now())
  argomento          String
  descrizione        String?
  stato_prenotazione String          @default("IN_ATTESA")
  matricola_studente String
  id_slot            String
  documenti          Documento[]
  slot               SlotRicevimento @relation(fields: [id_slot], references: [id_slot])
  studente           Studente        @relation(fields: [matricola_studente], references: [matricola])
}

model Documento {
  id_documento     String       @id @default(uuid())
  nome_file        String
  tipo_file        String
  dimensione       Int
  data_caricamento DateTime     @default(now())
  percorso_file    String
  id_prenotazione  String
  prenotazione     Prenotazione @relation(fields: [id_prenotazione], references: [id_prenotazione])
}

model Notifica {
  id_notifica        String   @id @default(uuid())
  titolo             String
  messaggio          String
  data_invio         DateTime @default(now())
  tipo               String
  letta              Boolean  @default(false)
  destinatario_id    String?
  destinatario_ruolo String?
}

model GiornoBloccato {
  id_giorno String   @id @default(uuid())
  data      DateTime @unique @db.Date
  motivo    String   @default("Festivo")
  creato_il DateTime @default(now())
}

model CodiceVerifica {
  id        String   @id @default(uuid())
  email     String
  codice    String
  tipo      String   @default("reset_password") // reset_password | 2fa
  scadenza  DateTime
  usato     Boolean  @default(false)
  creato_il DateTime @default(now())

  @@index([email, tipo])
}
