@startuml
!define primary_key(x) <b><color:#2E86C1><&key> x</color></b>
!define foreign_key(x) <color:#E74C3C><&hand-right> x</color>

skinparam backgroundColor #FEFCF3
skinparam package {
  BorderColor #2E86C1
  FontColor #1A5276
  FontSize 14
  FontStyle bold
}
skinparam rectangle {
  BorderColor #2E86C1
  BackgroundColor #D6EAF8
  RoundCorner 10
}
skinparam entity {
  BorderColor #1A5276
  BackgroundColor #EBF5FB
  RoundCorner 8
  FontSize 12
}
skinparam arrow {
  Color #E74C3C
  FontSize 11
  FontColor #922B21
}

title <b>UniMeet - Diagramma Entita-Relazione (E-R)</b>\n<i>Sistema di prenotazione ricevimento studenti</i>

' ============================================
' ENTITA PRINCIPALI
' ============================================

entity "CorsoDiStudi" as corso_di_studi {
  primary_key(id_corso_di_studi) : UUID
  --
  nome : String <<unique>>
}

entity "Studente" as studente {
  primary_key(matricola) : String
  --
  nome : String
  cognome : String
  email : String <<unique>>
  password : String
  foreign_key(id_corso_di_studi) : UUID
}

entity "Docente" as docente {
  primary_key(id_docente) : UUID
  --
  nome : String
  cognome : String
  email : String <<unique>>
  password : String
  ufficio : String
}

entity "Amministratore" as admin {
  primary_key(id_admin) : UUID
  --
  nome : String
  email : String <<unique>>
  password : String
}

entity "DocenteCorsoDiStudi" as docente_corso {
  foreign_key(id_docente) : UUID
  foreign_key(id_corso_di_studi) : UUID
  --
  <<associazione>>
}

entity "Corso" as corso {
  primary_key(id_corso) : UUID
  --
  nome_corso : String
  anno : Int
  cfu : Int
  foreign_key(id_docente) : UUID
  foreign_key(id_corso_di_studi) : UUID
}

' ============================================
' ENTITA RICEVIMENTO
' ============================================

entity "SlotRicevimento" as slot {
  primary_key(id_slot) : UUID
  --
  data : Date
  ora_inizio : Time
  ora_fine : Time
  disponibilita : Boolean
  foreign_key(id_docente) : UUID
}

entity "LuogoRicevimento" as luogo {
  primary_key(id_luogo) : UUID
  --
  nome_aula : String
  edificio : String
  piano : String
  latitudine : Float
  longitudine : Float
  foreign_key(id_slot) : UUID <<unique>>
}

entity "Prenotazione" as prenotazione {
  primary_key(id_prenotazione) : UUID
  --
  data_prenotazione : DateTime
  argomento : String
  descrizione : String
  stato_prenotazione : String
  foreign_key(matricola_studente) : String
  foreign_key(id_slot) : UUID
}

entity "Documento" as documento {
  primary_key(id_documento) : UUID
  --
  nome_file : String
  tipo_file : String
  dimensione : Int
  data_caricamento : DateTime
  percorso_file : String
  foreign_key(id_prenotazione) : UUID
}

' ============================================
' ENTITA BACHECA E FAQ
' ============================================

entity "Bacheca" as bacheca {
  primary_key(id_bacheca) : UUID
  --
  titolo : String
  descrizione : String
  data_ultimo_aggiornamento : DateTime
  foreign_key(id_corso_di_studi) : UUID <<unique>>
}

entity "FAQ" as faq {
  primary_key(id_faq) : UUID
  --
  domanda : String
  risposta : String
  data_pubblicazione : DateTime
  ultima_modifica : DateTime
  foreign_key(id_bacheca) : UUID
}

' ============================================
' ENTITA NOTIFICHE E VARIE
' ============================================

entity "Notifica" as notifica {
  primary_key(id_notifica) : UUID
  --
  titolo : String
  messaggio : String
  data_invio : DateTime
  tipo : String
  letta : Boolean
  destinatario_id : String
  destinatario_ruolo : String
}

entity "Segnalazione" as segnalazione {
  primary_key(id_segnalazione) : UUID
  --
  oggetto : String
  descrizione : String
  data_invio : DateTime
  stato : String
  foreign_key(matricola_studente) : String
  foreign_key(id_docente) : String
  allegato : String
}

entity "GiornoBloccato" as giorno_bloccato {
  primary_key(id_giorno) : UUID
  --
  data : Date <<unique>>
  motivo : String
  creato_il : DateTime
}

entity "CodiceVerifica" as codice_verifica {
  primary_key(id) : UUID
  --
  email : String
  codice : String
  tipo : String
  scadenza : DateTime
  usato : Boolean
  creato_il : DateTime
}

' ============================================
' RELAZIONI
' ============================================

' CorsoDiStudi -> entita figlie
corso_di_studi ||--o{ studente : "si iscrive"
corso_di_studi ||--o{ docente_corso : "afferenza"
corso_di_studi ||--o{ corso : "comprende"
corso_di_studi ||--|| bacheca : "possiede"

' Docente -> entita collegate
docente ||--o{ docente_corso : "afferenza"
docente ||--o{ corso : "insegna"
docente ||--o{ slot : "offre"
docente ||--o{ segnalazione : "riceve"

' DocenteCorsoDiStudi (M:N tra Docente e CorsoDiStudi)
docente_corso }o--|| docente : ""
docente_corso }o--|| corso_di_studi : ""

' Slot -> Luogo (1:1)
slot ||--|| luogo : "si tiene in"

' Slot -> Prenotazione
slot ||--o{ prenotazione : "contiene"

' Studente -> Prenotazione
studente ||--o{ prenotazione : "effettua"
studente ||--o{ segnalazione : "invia"

' Prenotazione -> Documento
prenotazione ||--o{ documento : "allegato"

' Bacheca -> FAQ
bacheca ||--o{ faq : "contiene"

@enduml
